--- a/databases/mongodb.yaml
+++ b/databases/mongodb.yaml
@@ -12,7 +12,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "mnt/data/mongodb"
+    path: "/mnt/data/mongodb"
 
 ---
 apiVersion: v1
@@ -59,22 +59,14 @@ spec:
             - mountPath: /data/db
               name: mongodb-storage
           livenessProbe:
-            exec:
-              command:
-                - mongosh
-                - --quiet
-                - --eval
-                - "db.adminCommand({ping:1}).ok"
+            tcpSocket:
+              port: 27017
             initialDelaySeconds: 30
             periodSeconds: 10
             failureThreshold: 3
           readinessProbe:
-            exec:
-              command:
-                - mongosh
-                - --quiet
-                - --eval
-                - "db.adminCommand({ping:1}).ok"
+            tcpSocket:
+              port: 27017
             initialDelaySeconds: 5
             periodSeconds: 5
             failureThreshold: 3
