--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -18,6 +18,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: api-ingress
+                name: api-gateway
                 port:
                   number: 8080
