--- a/configmaps.yaml
+++ b/configmaps.yaml
@@ -73,3 +73,12 @@ data:
   USER_SERVICE_URL: "http://user-service:8080"
   ORDER_SERVICE_URL: "http://order-service:8080"
   PAYMENT_SERVICE_URL: "http://payment-service:8080"
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: monitoring-config
+  namespace: innowise
+data:
+  OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector.monitoring.svc.cluster.local:4318"
