--- a/services/api-gateway.yaml
+++ b/services/api-gateway.yaml
@@ -24,6 +24,8 @@ spec:
           ports:
             - containerPort: 8080
           env:
+            - name: SPRING_APPLICATION_NAME
+              value: api-gateway
             - name: SPRING_PROFILES_ACTIVE
               valueFrom:
                 configMapKeyRef:
