--- a/services/auth-service.yaml
+++ b/services/auth-service.yaml
@@ -24,6 +24,8 @@ spec:
           ports:
             - containerPort: 8080
           env:
+            - name: SPRING_APPLICATION_NAME
+              value: auth-service
             - name: SPRING_PROFILES_ACTIVE
               valueFrom:
                 configMapKeyRef:
